--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ a{
 }
 .since{
     margin: 1% 0% 0% 0%;
+    width: 180px;
 }
 .numbers{
     display: flex;
@@ -55,6 +56,7 @@ a{
     margin-right: auto;
     display: flex;
     width: 78%;
+    gap: 20px;
 }
 .text{
     color: gray;
@@ -87,12 +89,182 @@ a{
 .basket:hover{
     opacity: 100%;
 }
+.footer_icon{
+    height: 30px;
+    border-radius: 10px;
+}
+.hor1{
+    margin-top: 1%; 
+    opacity: 70%; 
+    width: 78%; 
+    margin-left: auto;
+    margin-right: auto;
+}
+.hor2{
+    opacity: 70%; 
+    width: 78%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.footer_text1{
+    color: white;
+    margin-right: auto;
+}
+.footer_text2{
+    color: white; 
+    margin-right: 1%;
+}
+.footer1{
+    border: 0px solid;
+    background-color: black; 
+}
+.footer2{
+    
+    display: block;
+    width: 78%;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+}
+.footer3{
+    display: flex;
+}
+nav{
+    position: relative;
+    width: 78%;
+    margin: 30px auto 30px auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+}
+.nav1{
+    background-color: rgb(234, 233, 233);
+    border: none;
+    border-radius: 15px;
+    color: rgb(50, 50, 50);
+    font-size: 20px;
+    max-height: 30px;
+    flex-direction:row;
+    margin: 5px 0px 5px 30px;
+}
+.nav1:hover{
+    background-color: rgb(81, 81, 81);
+}
+.top_menu{
+    width: 100%;
+}
+.popup1, .popup2, .popup3, .popup{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top:0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.8s ease 0s;
+}
+.popup1:target, .popup2:target, .popup3:target, .popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+.popup1:target .popup_content, .popup2:target .popup_content, .popup3:target .popup_content, .popup:target .popup_content{
+    transform: perspective(600px) translate(0px, -1px) rotateX(0deg);
+    opacity: 1;
+}
+.popup_body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+.popup_content{
+    background-color: #fff;
+    color: #000;
+    max-width: 800px;
+    padding: 20px;
+    transition: all 0.5s ease 0s;
+    opacity: 0;
+    transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+    border-radius: 15px;
+}
+.popup_close{
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+}
+.popup_title{
+    font-size: 40px;
+    margin: 0px 0px 1em 0px;
+}
+.popup_text{
 
+}
+.fixedPos{
+    position: fixed;
+    display: none;
+}
+@media screen and (max-width: 850px){
+    .numbers, .hor1, .hor2{
+        display: none;
+    }
+    .footer2{
+        display: inline;
+        width: 78%;
+    }
+    .footer_text2{
+        margin-left: 11%;
+    }
+    .footer_text1{
+        margin-left: 11%;
+        padding-top: 15px;
+    }
+    .footer3{
+        margin-top: -10px;
+    }
+    nav{
+        position: relative;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+    }
+    .upper{
+        display: flex;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .basketText{
+        display: none;
+    }
+    .menu{
+        bottom: 30px;
+        right: 30px;
+        position: fixed;
+        z-index: 3000;
+    }
+    .basketImg{
+        height: 30px;
+        margin: 10px 10px 20px;
+    }
+    .text{
+        display: none;
+    }
+    
+}
+/*---------------------------------------------------*/
 .slider{
-    width: 1600px;
-    height: 600px;
+    width: 80%;
+    height: 60%;
     overflow: hidden;
     border: 10px solid rgb(255, 255, 255);
+    margin-top: 100px;
 }
 .middle{
     position: absolute;
@@ -122,7 +294,7 @@ a{
     transform: scale(1.1);
 }
  input[name="r"]{
-    position: absolute;
+    /*position: absolute;*/
     visibility: hidden;
  }
  .slides{
@@ -139,16 +311,16 @@ a{
     height: 100%;
  }
  #r1:checked ~ .s1 {
-    margin-left: 0;
+    margin-left: -1.32%;
  }
  #r2:checked ~ .s1 {
-    margin-left: -25%;
+    margin-left: -26.32%;
  }
  #r3:checked ~ .s1 {
-    margin-left: -50%;
+    margin-left: -51.32%;
  }
  #r4:checked ~ .s1 {
-    margin-left: -75%;
+    margin-left: -76.32%;
  }
 .btn{
     color: black;
