--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ a{
     border-radius: 10px;
 }
 .hor1{
-    margin-top: 1%; 
+    margin-top: 1%;
     opacity: 70%; 
     width: 78%; 
     margin-left: auto;
@@ -117,6 +117,7 @@ a{
 .footer1{
     border: 0px solid;
     background-color: black; 
+    margin-top: 700px;
 }
 .footer2{
     
@@ -154,6 +155,7 @@ nav{
     width: 100%;
 }
 .popup1, .popup2, .popup3, .popup{
+    z-index: 1;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -209,6 +211,70 @@ nav{
     position: fixed;
     display: none;
 }
+
+.slider{
+    width: 78%;
+    height: 65%;
+    overflow: hidden;
+    border: 10px solid rgb(255, 255, 255);
+    margin-top: 50px;
+}
+.middle{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.navigation{
+    position: absolute;
+    bottom: 16px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+}
+.bar{
+    height: 8px;
+    width: 30px;
+    margin: 6px;
+    cursor: pointer;
+    background-color: rgb(201, 201, 201);
+    opacity: .5;
+    border-radius: 10px;
+    transition: all .4s ease;
+}
+.bar:hover{
+    opacity: 0.8;
+    transform: scale(1.1);
+}
+ input[name="r"]{
+    position: absolute;
+    visibility: hidden;
+ }
+ .slides{
+    width: 400%;
+    height: 100%;
+    display: flex;
+ }
+ .slide{
+    width: 25%;
+    transition: all .6s ease;
+ }
+ .slide img{
+    width: 100%;
+    height: 100%;
+ }
+ #r1:checked ~ .s1 {
+    margin-left: 0%;
+ }
+ #r2:checked ~ .s1 {
+    margin-left: -25%;
+ }
+ #r3:checked ~ .s1 {
+    margin-left: -50%;
+ }
+ #r4:checked ~ .s1 {
+    margin-left: -75%;
+ }
 @media screen and (max-width: 850px){
     .numbers, .hor1, .hor2{
         display: none;
@@ -256,127 +322,20 @@ nav{
     .text{
         display: none;
     }
-    
-}
-/*---------------------------------------------------*/
-.slider{
-    width: 80%;
-    height: 60%;
-    overflow: hidden;
-    border: 10px solid rgb(255, 255, 255);
-    margin-top: 100px;
-}
-.middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.navigation{
-    position: absolute;
-    bottom: 16px;
-    left: 50%;
-    transform: translate(-50%);
-    display: flex;
-}
-.bar{
-    height: 8px;
-    width: 30px;
-    margin: 6px;
-    cursor: pointer;
-    background-color: rgb(201, 201, 201);
-    opacity: .5;
-    border-radius: 10px;
-    transition: all .4s ease;
-}
-.bar:hover{
-    opacity: 0.8;
-    transform: scale(1.1);
-}
- input[name="r"]{
-    /*position: absolute;*/
-    visibility: hidden;
- }
- .slides{
-    width: 400%;
-    height: 100%;
-    display: flex;
- }
- .slide{
-    width: 25%;
-    transition: all .6s ease;
- }
- .slide img{
-    width: 100%;
-    height: 100%;
- }
- #r1:checked ~ .s1 {
-    margin-left: -1.32%;
- }
- #r2:checked ~ .s1 {
-    margin-left: -26.32%;
- }
- #r3:checked ~ .s1 {
-    margin-left: -51.32%;
- }
- #r4:checked ~ .s1 {
-    margin-left: -76.32%;
- }
-.btn{
-    color: black;
-}
-
-
-/* .footer_icon{
-    height: 30px;
-    border-radius: 10px;
-}
-.hor1{
-    margin-top: 1%; 
-    opacity: 70%; 
-    width: 78%; 
-    margin-left: auto;
-    margin-right: auto;
-}
-.hor2{
-    opacity: 70%; 
-    width: 78%;
-    margin-left: auto;
-    margin-right: auto;
-}
-.footer_text1{
-    color: white;
-    margin-right: auto;
-}
-.footer_text2{
-    color: white; 
-    margin-right: 1%;
-}
-.footer1{
-    border: 0px solid;
-    background-color: black; 
-}
-.footer2{
-    
-    display: block;
-    width: 78%;
-    display: flex;
-    margin-right: auto;
-    margin-left: auto;
-}
-.footer3{
-    display: flex;
-}
-@media screen and (max-width: 850px){
-    .numbers, .hor1, .hor2, .menu{
-        display: none;
-    }
-    .footer2{
-        display: inline;
+    .slider{
         width: 78%;
+        height: 65%;
+        overflow: hidden;
+        border: 10px solid rgb(255, 255, 255);
+        margin-top: -80px;
     }
-    .footer_text1, .footer_text2{
-        margin-left: 11%;
-    } */
-
-/* } */
+}
+@media screen and (max-width: 415px){
+    .slider{
+        width: 78%;
+        height: 65%;
+        overflow: hidden;
+        border: 10px solid rgb(255, 255, 255);
+        margin-top: -20px;
+    }
+}
