--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ a{
     margin-right: auto;
     display: flex;
     width: 78%;
-    gap: 20px;
 }
 .text{
     color: gray;
@@ -130,30 +129,6 @@ a{
 .footer3{
     display: flex;
 }
-nav{
-    position: relative;
-    width: 78%;
-    margin: 30px auto 30px auto;
-    justify-content: center;
-    flex-wrap: wrap;
-    display: flex;
-}
-.nav1{
-    background-color: rgb(234, 233, 233);
-    border: none;
-    border-radius: 15px;
-    color: rgb(50, 50, 50);
-    font-size: 20px;
-    max-height: 30px;
-    flex-direction:row;
-    margin: 5px 0px 5px 30px;
-}
-.nav1:hover{
-    background-color: rgb(81, 81, 81);
-}
-.top_menu{
-    width: 100%;
-}
 .popup1, .popup2, .popup3, .popup{
     z-index: 1;
     position: fixed;
@@ -210,6 +185,30 @@ nav{
 .fixedPos{
     position: fixed;
     display: none;
+}
+nav{
+    position: relative;
+    width: 78%;
+    margin: 0px auto 30px auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+}
+.nav1{
+    background-color: rgb(234, 233, 233);
+    border: none;
+    border-radius: 15px;
+    color: rgb(50, 50, 50);
+    font-size: 20px;
+    max-height: 30px;
+    flex-direction:row;
+    margin: 5px 0px 5px 30px;
+}
+.nav1:hover{
+    background-color: rgb(81, 81, 81);
+}
+.top_menu{
+    width: 100%;
 }
 
 .slider{
@@ -293,13 +292,6 @@ nav{
     .footer3{
         margin-top: -10px;
     }
-    nav{
-        position: relative;
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        justify-content: center;
-    }
     .upper{
         display: flex;
         width: 100%;
@@ -323,19 +315,25 @@ nav{
         display: none;
     }
     .slider{
-        width: 78%;
+        width: 95%;
         height: 65%;
         overflow: hidden;
         border: 10px solid rgb(255, 255, 255);
-        margin-top: -80px;
+        margin-top: 40px;
+    }
+    .footer1{
+        margin-top: 830px;
     }
 }
 @media screen and (max-width: 415px){
     .slider{
-        width: 78%;
-        height: 65%;
+        width: 95%;
+        height: auto;
         overflow: hidden;
         border: 10px solid rgb(255, 255, 255);
         margin-top: -20px;
+    }
+    .footer1{
+        margin-top: 700px;
     }
 }
